--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.00)
-project(CHIP8-emu)
+project(CHIP8_emu)
+find_package(fmt REQUIRED)
+set(CMAKE_CXX_STANDARD 20)
+# Link fmt library
 
-set(CMAKE_CXX_STANDARD 14)
-
-add_executable(CHIP8-emu src/main.cpp)
+add_executable(CHIP8_emu src/main.cpp)
+target_link_libraries(CHIP8_emu  PRIVATE fmt::fmt)
